# ml-playground

./: README.md  pyproject.toml
data/: manual.csv  vocab.txt
data/claude/: drop.csv  office.csv  random.csv  student.csv  student2.csv  student3.csv
data/clean/: 2024-10-28_20-50-21.csv  2024-10-28_21-01-53.csv  2024-11-24_15-31-02.csv  2024-11-27_00-09-44.csv  2024-11-27_00-47-15.csv  2024-12-09_16-50-26.csv  2024-12-09_17-22-57.csv  2024-12-11_04-48-16.csv  2024-12-11_04-49-00.csv  2024-12-11_04-49-00_grouped.csv  dataset_final.csv  dataset_grouped.csv
data/gemini/: random.csv
data/gpt/: office.csv  office2.csv  random.csv  random_NU-I.csv  random_NU-NI.csv  random_U-I.csv  random_U-NI.csv  student.csv  student2.csv
model/: 2024-10-28_20-25-21.keras  2024-10-28_21-03-20.keras  2024-10-28_23-33-32.keras  2024-10-29_00-05-52.keras  2024-10-29_00-09-51.keras  2024-11-24_15-32-56.keras  2024-11-27_00-11-43.keras  2024-11-27_00-50-54.keras  2024-12-11_16-37-13.keras  2024-12-11_21-53-19.keras
src/: EDA.ipynb  clean.ipynb  run.ipynb  train.ipynb  utils.ipynb  utils.py
